<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/report_settings"
        android:title="@string/report_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <!--
    <item
    android:id="@+id/about_settings"
    android:title="@string/about_settings"
    android:orderInCategory="100"
    app:showAsAction="never" />
    -->

    <item
        android:id="@+id/quit"
        android:title="@string/quit"
        android:orderInCategory="101"
        app:showAsAction="never" />

</menu>