<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#ffffffff"
    android:id="@+id/MainLayout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header_picture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_mack_itservice"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/stopTime1"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/startStopButton"
            android:src="@drawable/start_50x50"
            android:layout_marginRight="5dp"
            android:background="#d9d9d9" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/calcButton"
            android:src="@drawable/calculator_inactive_50x50"
            android:background="#efefef"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/resetButton"
            android:src="@drawable/reset_inactive_50x50"
            android:background="#efefef"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/saveButton"
            android:src="@drawable/disc_inactive_50x50"
            android:background="#efefef" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Abrechnungszeitraum: \nStundenlohn:"
            android:id="@+id/startSummary"
            android:visibility="visible"
            android:textSize="16dp"
            android:maxLines="2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/startTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resetButton_old"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/stopTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startTime1"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/stoptime"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/startTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resetButton_old"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/stopTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startTime1"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/stoptime"
            android:layout_marginBottom="35dp" />

        <TextView
            android:id="@+id/workTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resetButton_old"
            android:layout_centerHorizontal="true"
            android:textSize="26sp"
            android:textColor="#000000"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/costs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="#000000"
            android:text="@string/costs"
            android:layout_below="@+id/stopTime1"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
